pA/solutions-check.txt
correct.cpp
solution            compile[FAIL]
exit-code: 1
stdout:
stderr:
In file included from grader.cpp:2:
2025TTC_Many.h:3:1: error: ‘pair’ does not name a type
    3 | pair<int, int> query();
      | ^~~~
grader.cpp: In function ‘int main()’:
grader.cpp:5:10: warning: left operand of comma operator is a reference, not call, to function ‘std::ios_base::sync_with_stdio’ [-Waddress]
    5 |     ios::sync_with_stdio, cin.tie(0);
      |     ~~~~~^~~~~~~~~~~~~~~
grader.cpp:5:10: warning: left operand of comma operator has no effect [-Wunused-value]
grader.cpp:19:32: error: ‘query’ was not declared in this scope
   19 |             pair<int,int> re = query();
      |                                ^~~~~

wrong.cpp
solution            compile[FAIL]
exit-code: 1
stdout:
stderr:
In file included from grader.cpp:2:
2025TTC_Many.h:3:1: error: ‘pair’ does not name a type
    3 | pair<int, int> query();
      | ^~~~
grader.cpp: In function ‘int main()’:
grader.cpp:5:10: warning: left operand of comma operator is a reference, not call, to function ‘std::ios_base::sync_with_stdio’ [-Waddress]
    5 |     ios::sync_with_stdio, cin.tie(0);
      |     ~~~~~^~~~~~~~~~~~~~~
grader.cpp:5:10: warning: left operand of comma operator has no effect [-Wunused-value]
grader.cpp:19:32: error: ‘query’ was not declared in this scope
   19 |             pair<int,int> re = query();
      |                                ^~~~~

